// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPreviewButton render() should render currentPostLink otherwise 1`] = `
<Button
  className="editor-post-preview"
  disabled={false}
  href="https://wordpress.org/?p=1"
  isLarge={true}
  onClick={[Function]}
  target="wp-preview-1"
>
  Preview
  <span
    className="screen-reader-text"
  >
    (opens in a new tab)
  </span>
  <WithSelect(WithDispatch(DotTip))
    tipId="core/editor.preview"
  >
    Click “Preview” to load a preview of this page, so you can make sure you’re happy with your blocks.
  </WithSelect(WithDispatch(DotTip))>
</Button>
`;

exports[`PostPreviewButton render() should render previewLink if provided 1`] = `
<Button
  className="editor-post-preview"
  disabled={false}
  href="https://wordpress.org/?p=1&preview=true"
  isLarge={true}
  onClick={[Function]}
  target="wp-preview-1"
>
  Preview
  <span
    className="screen-reader-text"
  >
    (opens in a new tab)
  </span>
  <WithSelect(WithDispatch(DotTip))
    tipId="core/editor.preview"
  >
    Click “Preview” to load a preview of this page, so you can make sure you’re happy with your blocks.
  </WithSelect(WithDispatch(DotTip))>
</Button>
`;
